--- a/Musify Application/Musify Application/App.config
+++ b/Musify Application/Musify Application/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <connectionStrings>
+    <add name="Sql" connectionString="server=LAPTOP-P13PI4CQ;database=Musify;uid=sa;password=usbw;"/>
+  </connectionStrings>
 </configuration>
