--- a/Musify Application/Musify Application/App.config
+++ b/Musify Application/Musify Application/App.config
@@ -4,6 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <connectionStrings>
-    <add name="Sql" connectionString="server=LAPTOP-P13PI4CQ;database=Musify;uid=sa;password=usbw;"/>
+    <add name="Sql" connectionString="server=LAPTOP-P13PI4CQ;database=Musify;uid=sa;password=banaan;"/>
   </connectionStrings>
+  <appSettings>
+    <add key="ErrorLog" value="errorLog.log"/>
+  </appSettings>
 </configuration>
