--- a/Musify Web/Musify Web/Web.config
+++ b/Musify Web/Musify Web/Web.config
@@ -4,13 +4,19 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <add name="Sql" connectionString="server=LAPTOP-P13PI4CQ;database=Musify;uid=sa;password=banaan;" />
+  </connectionStrings>
   <appSettings>
+    <add key="ErrorLog" value="errorLog.log"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+
+    <globalization culture="en-GB"/>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
