--- a/Musify Web/Musify Web/Web.config
+++ b/Musify Web/Musify Web/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="Sql" connectionString="server=LAPTOP-P13PI4CQ;database=Musify;uid=sa;password=banaan;" />
+    <add name="Sql" connectionString="server=192.168.19.20;database=Musify;uid=sa;password=banaan;" />
   </connectionStrings>
   <appSettings>
     <add key="ErrorLog" value="errorLog.log"/>
