--- a/Musify Web/Musify Web/Musify Web.csproj
+++ b/Musify Web/Musify Web/Musify Web.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Models\ViewModel\ArtistAlbumViewModel.cs" />
     <Compile Include="Models\ViewModel\ArtistGenreViewModel.cs" />
     <Compile Include="Models\ViewModel\ArtistViewModel.cs" />
+    <Compile Include="Models\ViewModel\CreateSongViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Repository\GenreRepository.cs" />
   </ItemGroup>
@@ -339,6 +340,7 @@
     <Content Include="Views\Album\Edit.cshtml" />
     <Content Include="Views\Songs\AllSongs.cshtml" />
     <Content Include="Views\Album\Songs.cshtml" />
+    <Content Include="Views\Songs\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
