Song listing Load Time Decreased, Edit & Delete Setup
Small Decrease in Song listing Load Time of the page.
Start of Edit & Delete song has been made,

--- a/Musify Web/Musify Web/Musify Web.csproj
+++ b/Musify Web/Musify Web/Musify Web.csproj
@@ -280,6 +280,7 @@
     <Content Include="Content\bootstrap\bootstrap.less" />
     <Content Include="Content\bootstrap\badges.less" />
     <Content Include="Content\bootstrap\alerts.less" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
@@ -339,8 +340,10 @@
     <Content Include="Views\Album\Delete.cshtml" />
     <Content Include="Views\Album\Edit.cshtml" />
     <Content Include="Views\Songs\AllSongs.cshtml" />
-    <Content Include="Views\Album\Songs.cshtml" />
     <Content Include="Views\Songs\Create.cshtml" />
+    <Content Include="Views\Album\Songs.cshtml" />
+    <Content Include="Views\Songs\Edit.cshtml" />
+    <Content Include="Views\Songs\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -372,7 +375,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>59147</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:59147/</IISUrl>
+          <IISUrl>http://localhost:59148/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
