Loading time improvements, Genre Client Side view added. Song CRUD finished.
Loading time when openening albums and/or songs has been improved.
The Client side view of the Genres has been added.
A start has been made on the client side view of the Artists.
The Song CRUD has been finished.

--- a/Musify Web/Musify Web/Musify Web.csproj
+++ b/Musify Web/Musify Web/Musify Web.csproj
@@ -344,6 +344,8 @@
     <Content Include="Views\Album\Songs.cshtml" />
     <Content Include="Views\Songs\Edit.cshtml" />
     <Content Include="Views\Songs\Delete.cshtml" />
+    <Content Include="Views\Genres\ClientGenres.cshtml" />
+    <Content Include="Views\Artists\ClientArtists.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
