Client Side functionality Added, Minor CRUD functionalities improved. CRUD Feature fixed.
More client side functionalities has been added. You are now able to see
genres, artists, albums and songs of an album as a Client.
speed of the CRUD features has been improved, features will now be added
faster and pages will load faster due to improved queries and code.
Create Song feature has been fixed, the wrong artist was being added or
something no artist was being added, resulting in null reference errors
in the application, and being unable to access a big part of the
website.

--- a/Musify Web/Musify Web/Musify Web.csproj
+++ b/Musify Web/Musify Web/Musify Web.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Models\ViewModel\ArtistGenreViewModel.cs" />
     <Compile Include="Models\ViewModel\ArtistViewModel.cs" />
     <Compile Include="Models\ViewModel\CreateSongViewModel.cs" />
+    <Compile Include="Models\ViewModel\SongAlbumOverView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Repository\GenreRepository.cs" />
   </ItemGroup>
@@ -346,6 +347,11 @@
     <Content Include="Views\Songs\Delete.cshtml" />
     <Content Include="Views\Genres\ClientGenres.cshtml" />
     <Content Include="Views\Artists\ClientArtists.cshtml" />
+    <Content Include="Views\Artists\ClientArtistDetails.cshtml" />
+    <Content Include="Views\Artists\ClientAlbumsOverview.cshtml" />
+    <Content Include="Views\Artists\ClientArtistGenresOverview.cshtml" />
+    <Content Include="Views\Shared\_LayoutJumboFw.cshtml" />
+    <Content Include="Views\Album\ClientAlbumOverview.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
