--- a/Musify Web/Musify Web/packages.config
+++ b/Musify Web/Musify Web/packages.config
@@ -5,6 +5,7 @@
   <package id="bootstrap.less" version="3.3.7" targetFramework="net452" />
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
+  <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.3.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net452" />
