--- a/Musify Web/Musify Web.Tests/Musify Web.Tests.csproj
+++ b/Musify Web/Musify Web.Tests/Musify Web.Tests.csproj
@@ -81,9 +81,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\GenreControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="GenresTest.cs" />
+    <Compile Include="ArtistsTest.cs" />
+    <Compile Include="AlbumTest.cs" />
+    <Compile Include="SongTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
